--- a/OpenGLAndroid/app/src/main/res/layout/activity_main.xml
+++ b/OpenGLAndroid/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/reset_button"
+            style="@android:style/ButtonBar"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_weight="1"
+            android:text="Reset" />
+
+        <Button
+            style="@android:style/ButtonBar"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="25dp"
+            android:id="@+id/switch_pan_rotate_button" />
+    </LinearLayout>
 
     <android.opengl.GLSurfaceView
         android:id="@+id/gl_surface_view"
